--- a/index.html
+++ b/index.html
@@ -173,5 +173,10 @@
                 © 2021 Olga Peshkova. All Rights Reserved.
             </p>
         </footer>
+
+<div class="preloader">
+    <img src="images/loading.png">
+</div>>
+
     </body>
 </html>
