visual design iterations

--- a/index.html
+++ b/index.html
@@ -19,22 +19,21 @@
                         <li class="inline-block navItem" id="work">work</li>
                         <li class="inline-block navItem">contact</li>
                     </ul>
+
+                    <div class="navContainer">
+                        <img 
+                            src="images/menu.png" 
+                            alt="menu">
+                    </div>
                     <div id="underline"></div>
-                <div class="navContainer">
-                    <img 
-                        src="images/menu.png" 
-                        alt="menu">
-                </div>
             </nav>      
         </header>
-        <div>
-            <div class="heroBanner">
-                <p id="introDescription">UI DESIGNER MELBOURNE
-                </p> 
-                <p id="introSummary">Brief brand statement goes here, more than likely it will go over two lines
-                </p> 
-            </div>    
-        </div>
+        <div class="heroBanner">
+            <p id="introDescription">UI DESIGNER MELBOURNE
+            </p> 
+            <p id="introSummary">Brief brand statement goes here, more than likely it will go over two lines
+            </p> 
+        </div>    
 
             <!-- My Work section coded using CSS flex-->
 
@@ -43,21 +42,21 @@
                 <div class="caseDescription"> 
                     <h4>ABC Responsive Web Design</h4>
                     <p>Some text goes here. Some text goes here.</p>
-                    <button>View Project</button>
+                    <button class="imgButton">View Project</button>
                 </div>
             </div>
             <div id="project2" class="workGridArea">
                 <div class="caseDescription">
                     <h4>Project2</h4>
                     <p>Some text goes here. Some text goes here.</p>
-                    <button>View Project</button>
+                    <button class="imgButton">View Project</button>
                 </div>
             </div >
             <div id="project3" class="workGridArea">
                 <div class="caseDescription">
                     <h4>Case Study 3</h4>
                     <p>Some text goes here. Some text goes here.</p>
-                    <button>View Project</button>
+                    <button class="imgButton">View Project</button>
                 </div>
             </div>
         </div>
