--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
         <script src="js/index.js"></script>
         <link href="css/styles.css" rel="stylesheet" type="text/css">
          <title>Olga Peshkova</title>
@@ -29,9 +31,10 @@
             </nav>      
         </header>
         <div class="heroBanner">
-            <p id="introDescription">UI DESIGNER MELBOURNE
-            </p> 
-            <p id="introSummary">Brief brand statement goes here, more than likely it will go over two lines
+            <p id="introTitle">UX/UI DESIGNER</p> 
+            <p id="introLocation">MELBOURNE</p> 
+            <p id="introSummary">I design simple, beautiful & intuitive<br> 
+                digital products
             </p> 
         </div>    
 
@@ -47,7 +50,7 @@
             </div>
             <div id="project2" class="workGridArea">
                 <div class="caseDescription">
-                    <h4>Project2</h4>
+                    <h4>Case Study 2</h4>
                     <p>Some text goes here. Some text goes here.</p>
                     <button class="imgButton">View Project</button>
                 </div>
@@ -173,9 +176,9 @@
             </p>
         </footer>
 
-<div class="preloader">
-    <img src="images/loading.png">
-</div>>
+        <div class="preloader">
+            <img src="images/loading.png">
+        </div>
 
     </body>
 </html>
