--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                 <div class="caseDescription">
                     <h4>Case Study 2</h4>
                     <p>Some text goes here. Some text goes here.</p>
-                    <button class="imgButton">View Project</button>
+                    <a href="https://olga-des.github.io/UX_UI_HW_20/"><button class="imgButton">View Project</button></a>
                 </div>
             </div >
             <div id="project3" class="workGridArea">
@@ -182,9 +182,9 @@
             </p>
         </footer>
 
-        <div class="preloader">
+        <!-- <div class="preloader">
             <img src="images/loading.png">
-        </div>
+        </div> -->
 
     </body>
 </html>
