--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
             <!-- My Work section coded using CSS flex-->
 
-        <div id="workGrid" id="overlay" >
+        <div id="workGrid" id="overlay">
             <div id="project1" class="workGridArea">
                 <div class="caseDescription"> 
                     <h4>ABC Responsive Web Design</h4>
@@ -54,10 +54,11 @@
                     <button class="imgButton">View Project</button>
                 </div>
             </div>
-            <div id="project2" class="workGridArea">
+            <div id="project2" class="workGridArea" style="background-image: url(images/Link2Care_App_1.jpg);">
                 <div class="caseDescription">
-                    <h4>Case Study 2</h4>
-                    <p>Some text goes here. Some text goes here.</p>
+                    <h4>Link2Care App</h4>
+                    <p id="description">Aims to be there for the carer, so that they can feel confident and be the best caregiver possible for their loved ones. 
+                    </p>
                     <a href="https://olga-des.github.io/UX_UI_HW_20/"><button class="imgButton">View Project</button></a>
                 </div>
             </div >
